--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,5 @@
 /* Configurações gerais */
+
 * {
     margin: 0;
     padding: 0;
@@ -15,20 +16,20 @@ body {
 header {
     background-color: rgb(44, 79, 255);
     padding: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: auto;
     box-shadow: 2px 2px 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto;
 }
 
 header a {
     text-decoration: none;
     color: aliceblue;
-    padding: 6px 10px;
     font-size: 17px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bolder;
+    padding: 6px 10px;
 }
 
 header a:hover {
@@ -104,7 +105,7 @@ table {
     display: flex;
     justify-content: center;
     margin: 20px auto;
-    height:auto;
+    height: auto;
     margin: auto;
 }
 
@@ -116,7 +117,7 @@ table {
     text-align: center;
 }
 
-#Caixinha {
+.Caixinha {
     background-color: rgb(142, 182, 247);
     padding: 5px 10px;
     border-radius: 20px;
@@ -153,7 +154,7 @@ table {
     margin-bottom: 15px;
 }
 
-#div-erro{
+#div-erro {
     background-color: #ffadb2;
     color: #ff0303;
     display: flex;
@@ -164,7 +165,7 @@ table {
     border-radius: 15px;
     font-size: 15px;
     font-weight: bolder;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #mapaTexto {
@@ -206,15 +207,16 @@ table {
     font-weight: 600;
     width: auto;
     text-align: justify;
-    margin:10px auto;
+    margin: 10px auto;
     align-content: center;
     background-color: #cbdeff;
     padding: 10px;
     border-radius: 15px;
 }
+
 .Referencias {
     font-size: 15px;
-    color: #f0f8ff;
+    color: #595d61;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     padding: 10px;
@@ -226,4 +228,51 @@ table {
 .listra {
     background-color: #8eb6f7;
     color: rgb(0, 0, 0);
+}
+
+
+/* ================================================================================ */
+
+/* Programando a página Sobre o Site */
+
+#container {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    justify-content: space-around;
+    
+}
+
+#descricao {
+    margin: 20px 20% 20px 2.5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+}
+
+#objetivo {
+    margin: 20px 2.5% 20px 20%  ;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    background-color: #8eb6f7;
+    padding: 10px;
+    border-radius: 10px 0 ;
+    border-right: #223cc2 solid 7px;
+    border-bottom: #223cc2 solid 6px;
+}
+
+#tecnologias {
+    margin: 20px 20% 20px 2.5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+}
+
+.configs {
+    background-color: #8eb6f7;
+    padding: 10px;
+    border-radius: 0 10px 10px 0;
+    border-left: #223cc2 solid 7px;
+    border-bottom: #223cc2 solid 6px;
 }
